--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,20 @@
 {
   "development": {
-    "username": "root",
+    "username": "postgres",
     "password": "Strange18!",
     "database": "music-tour-api",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "root",
+    "username": "postgres",
     "password": "Strange18!",
     "database": "musi-tour-api",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
+    "username": "postgres",
     "password": "Strange18!",
     "database": "music-tour-api",
     "host": "127.0.0.1",
